force-app/main/default/objects/Training_Notification_Log__c/Training_Notification_Log__c.object-meta.xml
<CustomObject>
<deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities>
<enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>false</enableSearch>
    <label>LogicLearn Notification Log</label><nameField><displayFormat>LLN-{00000}</displayFormat><label>Notification Number</label><type>AutoNumber</type></nameField>
    <pluralLabel>LogicLearn Notification Logs</pluralLabel><sharingModel>Private</sharingModel><visibility>Public</visibility>
</CustomObject>