force-app/main/default/objects/Training_Notification_Log__c/fields/Error__c.field-meta.xml
<CustomField><fullName>Error__c</fullName><label>Error</label><length>32768</length><visibleLines>3</visibleLines><type>LongTextArea</type></CustomField>