force-app/main/default/objects/Training_Notification_Log__c/fields/Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>Notification_Type__c</fullName>
    <label>Notification Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Assignment</fullName><default>true</default><label>Assignment</label></value>
            <value><fullName>New Video</fullName><default>false</default><label>New Video</label></value>
            <value><fullName>First Publish</fullName><default>false</default><label>First Publish</label></value>
            <value><fullName>Update</fullName><default>false</default><label>Update</label></value>
            <value><fullName>Required Update</fullName><default>false</default><label>Required Update</label></value>
            <value><fullName>Reminder</fullName><default>false</default><label>Reminder</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>