force-app/main/default/objects/Training_Notification_Log__c/fields/Sent_At__c.field-meta.xml
<CustomField><fullName>Sent_At__c</fullName><label>Sent At</label><required>false</required><type>DateTime</type></CustomField>