force-app/main/default/objects/Training_Notification_Log__c/fields/Status__c.field-meta.xml
<CustomField><fullName>Status__c</fullName><label>Status</label><required>true</required><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Sent</fullName><default>true</default><label>Sent</label></value><value><fullName>Failed</fullName><default>false</default><label>Failed</label></value></valueSetDefinition></valueSet></CustomField>