force-app/main/default/objects/Training_Notification_Log__c/fields/Training_Video__c.field-meta.xml
<CustomField><fullName>Training_Video__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Training Video</label><referenceTo>Training_Video__c</referenceTo><relationshipLabel>Notification Logs</relationshipLabel><relationshipName>Notification_Logs</relationshipName><required>false</required><type>Lookup</type></CustomField>