force-app/main/default/objects/Training_Notification_Log__c/fields/User__c.field-meta.xml
<CustomField><fullName>User__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Recipient</label><referenceTo>User</referenceTo><relationshipLabel>LogicLearn Notification Logs</relationshipLabel><relationshipName>LogicLearn_Notification_Logs</relationshipName><required>false</required><type>Lookup</type></CustomField>